...
        app:layout_constraintStart_toEndOf="@+id/AddTaskButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/settingsImageButton"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:backgroundTint="#9C3945"
        app:layout_constraintEnd_toEndOf="parent"
...
